<resources>

    <string name="app_name">TTSDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="start">Starting Record</string>
    <string name="stop">Playing Record</string>
    <string name="spxtts">Start Spx TTS</string>
    <string name="pcmtts">Start Pcm TTS</string>
    <string name="record">Record</string>
    <string name="replay">Replay</string>
    
    <string name="spx_encoder">Speex Encoder</string>
    <string name="spx_decoder">Speex decoder</string>
    
    <string name="speak_out">Speak Out</string>
    
    <string name="pcmvr">Start Pcm VR</string>
    <string name="filesvr">Start send files to VR</string>

</resources>