<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    
    
    <Button 
        android:id="@+id/pcm_recorder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        tools:context=".MainActivity" 
        />
    
    <Button
        android:id="@+id/pcm_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        tools:context=".MainActivity" 
        />
    
    <Button 
        android:id="@+id/pcm_tts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tts"
        tools:context=".MainActivity"
        />
    
    <Button 
        android:id="@+id/speexEncoder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spx_encoder"
        tools:context=".MainActivity"
        />
    
    <Button 
        android:id="@+id/speexDecoder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spx_decoder"
        tools:context=".MainActivity"
        />
    

    

</LinearLayout>
